# agent-forge

./: README.md  SECURITY.md  TECHNICAL.md
backend/gorilla/: fixtures.py  staking.py  watch.py
backend/tests/: test_staking.py  test_watch.py
docs/: demo-narration.md  demo-script.md
frontend/app/: globals.css  page.tsx
frontend/app/api/data/fixtures/: route.ts
frontend/app/api/data/odds/: route.ts
frontend/app/api/data/replay/: route.ts
frontend/components/hero/: hero-market-card.tsx  poster-hero.tsx
frontend/components/home/: problem-section.tsx
frontend/components/layout/: logo.tsx
frontend/components/settlement/: place-bet-panel.tsx
frontend/lib/agent/: replay.ts
frontend/lib/mongo/: fixtures.ts  odds.ts  replay.ts  types.ts
frontend/lib/solana/: predicate.ts
frontend/tests/: agent-replay.test.ts  mongo-line.test.ts  predicate.test.ts
program/: Cargo.toml
program/programs/forge-insurance/: Cargo.toml
program/programs/forge-insurance/src/: errors.rs  interface.rs  lib.rs  state.rs
program/programs/forge-insurance/src/instructions/: bind_policy.rs  claim_policy.rs  mod.rs  open_policy.rs  settle_policy.rs
program/programs/forge-markets/: Cargo.toml
program/programs/forge-markets/src/: errors.rs  lib.rs  state.rs
program/programs/forge-markets/src/instructions/: claim.rs  create_market.rs  settle.rs
program/programs/gate-consumer/: Cargo.toml
program/programs/gate-consumer/src/: lib.rs
program/programs/gate-engine/: Cargo.toml
program/programs/gate-engine/src/: lib.rs
program/programs/settlement-core/: Cargo.toml
program/programs/settlement-core/src/: errors.rs  lib.rs  txoracle_cpi.rs
program/tests/src/: lib.rs
program/tests/tests/: gate_hop_tests.rs  insurance_tests.rs  settlement_tests.rs
