[workspace]
# Explicit members (not a `programs/*` glob): the Mollusk test crate lives at
# `tests/`, and a glob would try to load it as a Solana program and fail. Listing
# members explicitly is unambiguous.
members = [
    "programs/forge-markets",
    # The reusable trustless settlement ENGINE — consumers CPI its `resolve`.
    "programs/settlement-core",
    # SECOND consumer of the engine (proves reuse) — parametric event insurance.
    "programs/forge-insurance",
    # TEST DOUBLE for txoracle::validate_stat — Mollusk-only, never in Anchor.toml
    # (no devnet deploy target). See programs/mock-txoracle/src/lib.rs.
    "programs/mock-txoracle",
    # GATE PROBES — Mollusk-only, never deployed. Prove return-data survives the
    # two-hop consumer→engine→txoracle CPI (SETTLEMENT-ENGINE.md #1 risk).
    "programs/gate-engine",
    "programs/gate-consumer",
    "tests",
]
resolver = "2"

# Inherited by the member crates (they declare `edition/license/repository =
# { workspace = true }`).
[workspace.package]
edition = "2021"
license = "MIT"
# NOTE: the DEPLOYED devnet binary's baked security_txt (lib.rs) still says
# agent-forge — that string only changes on a redeploy.
repository = "https://github.com/GeckoVision/gorilla-app"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
