[package]
name = "forge-markets"
version = "0.1.0"
description = "Gorilla Markets — trustless prediction escrow settled by a CPI into TxODDS txoracle::validate_stat. Anchor 1.0. DEVNET-ONLY."
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "forge_markets"

[features]
default = []
# Build the program pinned to the TxODDS MAINNET txoracle id instead of devnet.
# Required for any mainnet deploy (see txoracle_cpi::TXORACLE_PROGRAM_ID). Off by
# default so devnet builds + the Mollusk suite are unaffected.
mainnet-oracle = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# Anchor 1.0.2 — pinned so the whole Cargo workspace resolves on a single
# Solana 3.x crate tree (see Anchor.toml note).
anchor-lang = "1.0.2"
# The reusable settlement ENGINE. `features = ["cpi"]` (→ no-entrypoint) links the
# `cpi::resolve` helper + shared oracle types WITHOUT a second program entrypoint.
# forge-markets is now the engine's FIRST consumer: settle CPIs `resolve`; the F1
# binding + txoracle CPI + fail-closed decode all live in settlement-core.
settlement-core = { path = "../settlement-core", features = ["cpi"] }
# On-chain security.txt. Default (no) features = macro only — the optional `parser`
# deps (memchr/thiserror) are for host-side tooling and are NOT pulled into the
# program build. The macro is gated `not(feature = "no-entrypoint")` in lib.rs.
solana-security-txt = "1.1.3"
